@@ -418,7 +418,7 @@ expression_event(Sends, Expressions, Id,
                                   Description, Dispatcher),
     ?LOG(DebugLogLevel,
          "\"~ts\" event sent to ~ts",
-         [Description, ServiceName]),
+         [Description, cloudi_service_name:utf8(ServiceName)]),
     SendsNew = event_send(SendMcast, Sends, SendArgsCall, Id,
                           Service, Dispatcher),
     {SendsNew,
